--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div class="frame frame_bg">
 				<div class="frame__content">
-					<div class="frame-media frame-media_right" style="background-image: url(images/23-1.png)"></div>
+					<div class="frame-media frame-media_right" style="background-image: url(images/23.png)"></div>
 				</div>
 			</div>
 
